# skill-hub

./: .gitignore  README.md  skills-index.json
.github/workflows/: validate-skills.yml
scripts/: validate_skills.py
shu-shu-divination-engine/: SKILL.md  pyproject.toml  requirements.txt
shu-shu-divination-engine/agents/: openai.yaml
shu-shu-divination-engine/evals/: README.md  conversation-evals.json  evals.json  trigger-evals.json
shu-shu-divination-engine/references/: engine-usage.md  execution-workflows.md  method-selection.md  predictive-question-bank.md  user-question-corpus-map.md
shu-shu-divination-engine/scripts/: divination_engine.py  engine_common.py  engine_liuren.py  engine_liuyao.py  engine_qimen.py  install_runtime.py  liuyao_provider_native.py  run_conversation_evals.py  run_engine_evals.py  run_trigger_eval_batches.py  run_trigger_eval_matrix.py  run_trigger_evals.py
shu-shu-divination-engine/tests/: test_divination_engine.py
skill-creator/: SKILL.md
skill-creator/agents/: openai.yaml
skill-creator/references/: configuration.md  generic-skill-config.json  openai_yaml.md
skill-creator/scripts/: generate_openai_yaml.py  quick_validate.py
skill-forge/: SKILL.md
skill-forge/agents/: openai.yaml
skill-forge/evals/: evals.json
skill-forge/references/: configuration.md  openai_yaml.md
skill-forge/scripts/: generate_skill_portfolio_report.py  init_evals.py  init_skill.py  run_skill_benchmarks.py  skill_config.py
webnovel-style-forge/: SKILL.md
webnovel-style-forge/agents/: openai.yaml
wechat-content-forge/: SKILL.md
(+56 files in other folders)
